[tool.poetry]
name = "src"
version = "0.0.24"
description = "Experiments for RL with the ACN Research Portal."
authors = ["Your Name <you@example.com>"]
license = "BSD"
readme = "README.md"
packages = [{ include = "src" }]
include = [{ path = "src/data", format = "wheel" }]

[tool.poetry.dependencies]
python = "==3.9.18"
gymportal = { git = "https://git.ies.uni-kassel.de/mhassouna/acnsimulation_gym", rev = "duration_multiplicator" }
gputil = "1.4.0"
jupyter = "*"
tqdm = "*"
icecream = "*"
torch = "2.5.1"
tensorboard = "^2.19.0"
seaborn = "^0.13.2"
absl-py = "2.1.0"
pandas = "2.2.2"
wandb = "^0.19.11"
optuna = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
